# DutchBay_EPC_Model

./: .coveragerc  .gitignore  CHANGELOG.md  full_model_variables_updated.yaml  pyproject.toml  qc_report_future_norm.json  qc_report_handlers_real.json
.github/: CODEOWNERS
.venv311/: pyvenv.cfg
_out/: scenario_000_annual_1762766614.csv  scenario_000_results_1762766584.jsonl  scenario_000_results_1762766614.csv  scenario_demo_override_annual_1762778705.csv  scenario_demo_override_annual_1762780121.csv  scenario_demo_override_results_1762779804.csv  scenario_demo_override_results_1762779903.jsonl  scenario_demo_override_results_1762780121.csv  scenario_demo_override_results_1762780121.jsonl
_out_matrix_test/: scenario_a_results_1762785808.csv  scenario_a_results_1762785808.jsonl  scenario_b_results_1762785808.csv  scenario_b_results_1762785808.jsonl
_regression/: report.txt  summary.json
backup files/: adapters.py.bak  pytest.ini.bak.1762769514  scenario_runner.py.bak  scenario_runner.py.bak.1762828593  scenario_runner.py.bak.1762828918  scenario_runner.py.bak_allfix  scenario_runner.py.bak_force_matrix  scenario_runner.py.bak_run_matrix_1762785808  scenario_runner.py.bak_run_matrix_1762786006  scenario_runner.py.bak_sig  scenario_runner.py.bak_validator_mode
dutchbay_v13/: __init__.py  __main__.py  adapters.py  api.py  charts.py  cli.py  cli.py.bak_allfix  config.py  core.py  epc.py  legacy_v12.py  monte_carlo.py  optimization.py  report.py  report.py.bak.1762794027  report_pdf.py  (+11 more)
dutchbay_v13.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+44 files in other folders)
